# mypasswordsafe

./: .gitignore  CHANGES  COPYING  Makefile  MyPasswordSafe.ebuild  MyPasswordSafe.pro  README  doxygen.conf  resources.qrc
doc/: endian.txt  manual.fr.html  manual.html
doc/design/: Schedule.ksp  inputs.txt  new_features.txt  refactoring_plan.txt  spec.abw  timing.txt
doc/file_formats/: formatV1.txt  formatV2.txt
examples/: attr  attr.cpp  safe  safe.cpp
images/: Padlock.xpm  keys.icns
locale/: mypasswordsafe_c.ts  mypasswordsafe_en.ts  mypasswordsafe_fr.ts
release/: Makefile
src/: aboutdlg.ui  aboutdlg.ui.h  attic.cpp  clipboard.cpp  clipboard.hpp  encryptedstring.cpp  encryptedstring.hpp  exception.hpp  main.cpp  manualdlg.ui  manualdlg.ui.h  myendian.h  mypasswordsafe.ui  mypasswordsafe.ui.h  myutil.cpp  myutil.hpp  newpassphrasedlg.ui  newpassphrasedlg.ui.h  passphrasedlg.ui  passphrasedlg.ui.h  plaintextlizer.cpp  plaintextlizer.hpp  preferencesdlg.ui  preferencesdlg.ui.h  pwordeditdlg.ui  pwordeditdlg.ui.h  safe.cpp  safe.hpp  safedragobject.cpp  safedragobject.hpp  safelistview.cpp  safelistview.hpp  safeserializer.cpp  safeserializer.hpp  securedstring.cpp  securedstring.hpp  serializers.cpp  serializers.hpp  smartptr.cpp  smartptr.hpp  (+9 more)
src/crypto/: bfproxy.cpp  bfproxy.hpp  blowfish.cpp  blowfish.h  cryptointerface.hpp  sha1.cpp  sha1.h
src/pwsafe/: BlowFish.cpp  BlowFish.h  LICENSE  PW_BlowFish.cpp  PW_BlowFish.h  PW_sha1.cpp  PW_sha1.h  PwsPlatform.h  Util.cpp  Util.h  sha1.cpp
test/: bfproxytest.build  bfproxytest.cpp  bigsafemaker.cpp  build.txt  cbc.cpp  main.cpp
test/dndproto/: dndproto.cpp  dndproto.hpp  dndtest.pro
test/myutil/: myutil.pro  myutiltest.cpp  myutiltest.hpp
test/oldtests/: blowfish.cpp  groups.cpp  securedstring.cpp  smartptr.cpp
tools/: cvs2cl.pl
uuid-1.0.0/: ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  shtool  uuid-config  uuid-config.1  uuid-config.in  uuid-config.pod  uuid.1  uuid.3  uuid.ac  uuid.c  uuid.h  uuid.h.in  uuid.pod  uuid_ac.h  uuid_bm.h  uuid_cli.c  uuid_cli.pod  uuid_dce.c  uuid_dce.h  uuid_mac.c  uuid_mac.h  uuid_md5.c  uuid_md5.h  uuid_prng.c  uuid_prng.h  uuid_str.c  (+4 more)
(+17 files in other folders)
